AC_INIT(Freenukum, 0.2.7, http://launchpad.net/freenukum/)
AM_INIT_AUTOMAKE(freenukum, 0.2.7)

AC_ARG_ENABLE(testprograms,
    [  --enable-testprograms   Compile the test programs],
    [BUILD_TESTPROGRAMS="yes"])

AM_CONDITIONAL(TESTPROGRAMS, test x"$BUILD_TESTPROGRAMS" = xyes)

AC_PROG_CC

AC_CONFIG_SRCDIR(src)

AC_PATH_PROG(SDLCONFIG, sdl-config, yes)

CFLAGS="$CFLAGS -Wall -Werror "`sdl-config --cflags`
LDFLAGS="$LDFLAGS "`sdl-config --libs`

AC_OUTPUT([Makefile src/Makefile freenukum.desktop])
