AC_INIT(Freenukum, 0.2.9, http://launchpad.net/freenukum/)
AM_INIT_AUTOMAKE(freenukum, 0.2.9)

AC_ARG_ENABLE(testprograms,
    [  --enable-testprograms   Compile the test programs],
    [BUILD_TESTPROGRAMS="yes"])

AM_CONDITIONAL(TESTPROGRAMS, test x"$BUILD_TESTPROGRAMS" = xyes)

AC_PROG_CC

AC_CONFIG_SRCDIR(src)

AC_PATH_PROG(SDLCONFIG, sdl-config, yes)

AC_CHECK_PROG(CONVERT, convert, "yes", "no", [$PATH])
AM_CONDITIONAL(CREATEICONS, test x"$CONVERT" = xyes)

CFLAGS="$CFLAGS -Wall -Werror "`sdl-config --cflags`
LDFLAGS="$LDFLAGS "`sdl-config --libs`

AC_OUTPUT([Makefile
           src/Makefile 
           freenukum.desktop
           data/Makefile
           data/icons/Makefile
           data/icons/16x16/Makefile
           data/icons/22x22/Makefile
           data/icons/24x24/Makefile
           data/icons/32x32/Makefile
           data/icons/48x48/Makefile
           data/icons/64x64/Makefile
           data/icons/72x72/Makefile
           data/icons/96x96/Makefile
           data/icons/128x128/Makefile
           data/icons/256x256/Makefile
           data/icons/scalable/Makefile
           ])
