AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = freenukum

INCLUDES = \
					 -I$(srcdir)

freenukum_SOURCES = fn.h \
										fn_object.h \
										fn_actor.h          fn_actor.c \
										fn_borders.h        fn_borders.c \
										fn_bot.h            fn_bot.c \
										fn_draw.h           fn_draw.c \
										fn_drop.h           fn_drop.c \
										fn_effect.h         fn_effect.c \
										fn_error.h          fn_error.c \
										fn_error_cmdline.h  fn_error_cmdline.c \
										fn_game.h           fn_game.c \
										fn_hero.h           fn_hero.c \
										fn_infobox.h        fn_infobox.c \
										fn_item.h           fn_item.c \
										fn_level.h          fn_level.c \
										fn_mainmenu.h       fn_mainmenu.c \
										fn_msgbox.h         fn_msgbox.c \
										fn_picture.h        fn_picture.c \
										fn_picture_splash.h fn_picture_splash.c \
										fn_settings.h       fn_settings.c \
										fn_text.h           fn_text.c \
										fn_tile.h           fn_tile.c \
										fn_tilecache.h      fn_tilecache.c \
										fn_shot.h           fn_shot.c \
										freenukum.c
